# opinionated-rust-to-typescript

./: .gitignore  Cargo.toml  README.md
examples/: transpile-arg.rs  transpile-file.rs
src/: lib.rs
src/rs2018_ts4/: mod.rs  rs2018_ts4_gungho.rs
src/rs2018_ts4/lexemize/: lexeme.rs  lexemize.rs  mod.rs
src/rs2018_ts4/lexemize/detect/: character.rs  comment.rs  identifier.rs  mod.rs  number.rs  punctuation.rs  string.rs  whitespace.rs
src/rs2018_ts4/lexemize/identify/: character.rs  comment.rs  identifier.rs  mod.rs  number.rs  punctuation.rs  string.rs  whitespace.rs
src/rs_ts/: mod.rs  rs_ts.rs  transpile_error.rs
src/transpile/: config.rs  error.rs  mod.rs  result.rs  rs_to_ts.rs  transpile.rs  transpile_result.rs
