[package]
name = "opinionated_rust_to_typescript"
version = "0.1.0"
authors = ["Undo3D <info@undo3d.com>"]
edition = "2018"
description = "Opinionated library for transpiling Rust code to TypeScript"
readme = "README.md"
repository = "https://github.com/Undo3D/opinionated-rust-to-typescript"
license = "MIT OR Apache-2.0"
keywords = ["code", "typescript", "transpiler", "lexer", "highlighter"]
categories = ["compilers"]